@@ -60,6 +60,11 @@ public final class ApplicationArguments {
 
     /** Do not try to update the application (useful for Linux packages). */
     public static final String NO_UPDATE = "no-update";
+    
+    /**
+     * Used to enable plugins
+     */
+    public static final String ENABLE_PLUGINS = "enable-plugins";
 
     /**
      * Saved arguments
@@ -124,6 +129,7 @@ public final class ApplicationArguments {
         checkAndSave(arguments, USE_CONFIG_FOLDER);
         checkAndSave(arguments, USE_REPOSITORY_CONFIG_FOLDER);
         checkAndSave(arguments, NO_UPDATE);
+        checkAndSave(arguments, ENABLE_PLUGINS);
         checkAndSave(arguments, CommandHandler.COMMAND_PREFIX);
     }
 
