@@ -96,6 +96,8 @@ public final class Main {
 
             // Set no update flag in kernel
             Kernel.setNoUpdate(arguments.contains(ApplicationArguments.NO_UPDATE));
+            
+            Kernel.setEnablePlugins(arguments.contains(ApplicationArguments.ENABLE_PLUGINS));
 
             // Set custom config folder if passed as argument
             SystemProperties.setCustomConfigFolder(ApplicationArguments.getUserConfigFolder(arguments));
